# bili-batch-unsubcribe

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/auth/: mod.rs  qrcode.rs
src/user/: me.rs  mod.rs  myself.rs  relation.rs
