[package]
name = "bili-batch-unsubscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qr2term = "0.3.1"
inquire = "0.6.0"
rustc-hash = "1.1.0"

anyhow = "1.0.69"
tracing = "0.1.37"

serde_json = "1.0.94"

reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["time", "fmt"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.reqwest]
version = "0.11.14"
features = ["cookies", "json", "native-tls-vendored"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.time]
version = "0.3.20"
features = ["local-offset"]

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
