[package]
name = "bili-batch-unsubscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qr2term = "0.3.2"
inquire = "0.7.5"
ahash = "0.8"

anyhow = "1.0.89"
tracing = "0.1.37"

serde_json = "1.0.128"

reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["time", "fmt"]

[dependencies.tokio]
version = "1.40"
features = ["rt-multi-thread", "macros"]

[dependencies.reqwest]
version = "0.12.7"
features = ["cookies", "json", "native-tls-vendored"]
default-features = false

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.time]
version = "0.3.36"
features = ["local-offset"]

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
